Working BLAS flow for knn dot product